--- a/app/views/spree/admin/suppliers/_form.html.erb
+++ b/app/views/spree/admin/suppliers/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@spree_admin_supplier) do |f| %>
+<%= form_for(@supplier) do |f| %>
 
   <%= f.field_container :name do %>
     <%= f.label :name, t("name") %><br />
