--- a/app/views/spree/admin/suppliers/_form.html.erb
+++ b/app/views/spree/admin/suppliers/_form.html.erb
@@ -32,10 +32,10 @@
         <%= error_message_on :supplier, :website %>
       <% end %>
     </div>
-    <div class="left" data-hook="admin_supplier_form_left">
+    <div class="left" data-hook="admin_supplier_form_right">
       <%= f.field_container :notes do %>
         <%= f.label :notes, t("notes") %><br />
-        <%= f.text_area :notes, {:cols => 60, :rows => 4, :class => 'fullwidth'}  %>
+        <%= f.text_area :notes, {:cols => 30, :rows => 4, :class => 'fullwidth'}  %>
         <%= error_message_on :supplier, :notes %>
       <% end %>
       <%= f.field_container :twitter do %>
@@ -50,7 +50,7 @@
       <% end %>
       <%= f.field_container :description do %>
         <%= f.label :description, t("description") %><br />
-        <%= f.text_area :description  %>
+        <%= f.text_area :description, {:cols => 30, :rows => 4, :class => 'fullwidth'}  %>
         <%= error_message_on :supplier, :description %>
       <% end %>
     </div>
